--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dexns": "bin/dexns"
   },
   "scripts": {
-    "start": "echo \"nodemon --watch 'src/**/*.js' --exec src/dexns.js is not yet the right command\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**"
   },
@@ -19,9 +18,9 @@
   "preferGlobal": true,
   "dependencies": {
     "execa": "^3.2.0",
-    "inquirer": "^7.0.0",
     "listr": "^0.14.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prompts": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
